--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Metro Vigan Hospital</title>
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/fontawesome.min.css" integrity="sha512-SgaqKKxJDQ/tAUAAXzvxZz33rmn7leYDYfBP+YoMRSENhf3zJyx3SBASt/OfeQwBHA1nxMis7mM3EV/oYT6Fdw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="icon" href="src/img/logo/favicon.ico" type="image/x-icon">
+
   <!-- Google Font: Roboto -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
@@ -34,18 +39,54 @@
 </head>
 <body class="bg-white text-gray-800">
 
-  <!-- Header -->
+
+  <nav class="fixed top-0 z-50 w-full bg-white border-b shadow-md sm:px-4 md:px-6 px-10 py-2" aria-label="Main navigation">
+    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+      <!-- Logo -->
+      <a href="" class="flex items-center justify-center">
+        <img src="src/img/logo/mvh_logo.png" class="h-16 mr-3" alt="MVH Logo" />
+        <span class="self-center text-2xl font-semibold whitespace-nowrap hidden md:inline">Metro Vigan Hospital</span>
+    </a>
+  
+      <!-- Toggle Button (Visible on small & medium screens) -->
+      <button id="menu-toggle" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm rounded-lg lg:hidden">
+        <span class="sr-only">Open main menu</span>
+        <svg id="menu-icon" class="w-6 h-6 text-green hover:text-black" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"/>
+        </svg>
+      </button>
+  
+      <!-- Navbar Menu -->
+      <div id="navbar-menu" class="hidden w-full lg:flex lg:w-auto">
+        <ul class="font-medium flex flex-col p-4 text-lg lg:flex-row lg:space-x-7">
+          <li><a href="#home" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
+          <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
+          <li><a href="#facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
+          <li><a href="#doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
+          <li><a href="#about" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
+          <li>
+            <a href="#contact" class="block w-full text-center bg-green-700 text-white rounded-md hover:bg-green-800 px-6 py-3">Contact Us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  
+    
+  <!-- Header 
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur-md shadow-sm transition duration-300" data-aos="fade-down" data-aos-duration="800">
   <div class="max-w-7xl mx-auto flex items-center justify-between px-6 py-3">
-    <!-- Left: Logo + Title -->
+   
+    Left: Logo + Title 
     <div class="flex items-center space-x-3">
       <img src="src/img/logo/mvh_logo.png" alt="Metro Vigan Hospital Logo" class="h-10 w-auto">
       <span class="text-lg font-semibold text-gray-800">Metro Vigan Hospital</span>
     </div>
 
-    <!-- Right: Nav + Button -->
+    Right: Nav + Button 
     <div class="flex items-center space-x-6">
-      <!-- Desktop Navigation -->
+      
+       Desktop Navigation 
       <nav class="hidden md:flex items-center space-x-6 text-sm font-medium text-gray-800">
         <a href="" class="hover:text-green-700">Home</a>
         <a href="#services" class="hover:text-green-700">Services</a>
@@ -54,13 +95,13 @@
         <a href="#about" class="hover:text-green-700">About Us</a>
       </nav>
 
-      <!-- Contact Button -->
+       Contact Button 
       <button class="hidden md:block bg-green-600 text-white text-sm font-medium px-4 py-2 rounded-md hover:bg-green-700 transition">
         Contact Us
       </button>
     </div>
 
-    <!-- Mobile Menu Icon -->
+     Mobile Menu Icon
     <div class="md:hidden">
       <button id="menu-btn" class="focus:outline-none">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-800" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -70,7 +111,7 @@
     </div>
   </div>
 
-  <!-- Mobile Dropdown -->
+   Mobile Dropdown 
   <nav id="mobile-menu" class="hidden flex-col bg-white/95 shadow-md backdrop-blur px-6 py-4 md:hidden">
     <a href="" class="py-2 border-b hover:text-green-700 transition">Home</a>
     <a href="#services" class="py-2 border-b hover:text-green-700 transition">Services</a>
@@ -83,8 +124,10 @@
   </nav>
 </header>
 
+    -->
+
   <!-- Hero Section -->
-  <section class="flex flex-col lg:flex-row items-center">
+  <section id="home" class="flex flex-col lg:flex-row items-center pt-32">
   <!-- Left Content (60%) -->
   <div class="w-full md:w-3/5 px-6 md:px-16 py-10 md:py-20 text-center md:text-left relative">
     <h2 class="text-3xl md:text-6xl font-bold" data-aos="fade-up" data-aos-delay="100">METRO VIGAN HOSPITAL</h2>
@@ -1077,6 +1120,16 @@
   </div>
 </footer>
 
+
+<!-- icons / css -->
+<script>
+  const toggleBtn = document.getElementById('menu-toggle');
+  const menu = document.getElementById('navbar-menu');
+
+  toggleBtn.addEventListener('click', () => {
+    menu.classList.toggle('hidden');
+  });
+</script>
 
   <!-- AOS Script -->
   <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
