fixed hmo_medicard image link

--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
         <img src="src/img/hmo/maxicare.png" alt="HMO Partner 1" class="p-2 max-h-14 object-contain grayscale hover:grayscale-0 transition">
       </div>
       <div class="w-40 h-24 flex items-center justify-center bg-white">
-        <img src="src/img/hmo/med.png" alt="HMO Partner 2" class="p-2 max-h-14 object-contain grayscale hover:grayscale-0 transition">
+        <img src="src/img/hmo/Med.png" alt="HMO Partner 2" class="p-2 max-h-14 object-contain grayscale hover:grayscale-0 transition">
       </div>
       <div class="w-40 h-24 flex items-center justify-center bg-white">
         <img src="src/img/hmo/intellicare.webp" alt="HMO Partner 3" class="p-2 max-h-14 object-contain grayscale hover:grayscale-0 transition">
