--- a/src/pages/privacy-policy.html
+++ b/src/pages/privacy-policy.html
@@ -80,15 +80,19 @@
       </button>
 
       <!-- Navbar Menu -->
-      <div id="navbar-menu" class="hidden w-full lg:flex lg:w-auto transition-all duration-300 ease-in-out">
+      <div id="navbar-menu" class="hidden w-full lg:flex lg:w-auto">
         <ul class="font-medium flex flex-col p-4 text-lg lg:flex-row lg:space-x-7">
-            <li><a href="#services" class="hover:text-green-600 transition">Our Services</a></li>
-            <li><a href="#facilities" class="hover:text-green-600 transition">Facilities</a></li>
-            <li><a href="#doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
-            <li><a href="#about" class="hover:text-green-600 transition">About Us</a></li>
-            <li><a href="#contact" class="hover:text-green-600 transition">Contact</a></li>
+          <li><a href="#home" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
+          <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
+          <li><a href="#facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
+          <li><a href="#doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
+          <li><a href="about-us.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
+          <li>
+            <a href="#contact" class="block w-full text-center bg-green-700 text-white rounded-md hover:bg-green-800 px-6 py-3">Contact Us</a>
+          </li>
         </ul>
       </div>
+
     </div>
   </nav>
 
@@ -170,10 +174,10 @@
         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600 text-sm">
           <li><a href="#services" class="hover:text-green-600 transition">Our Services</a></li>
-          <li><a href="#facilities" class="hover:text-green-600 transition">Facilities</a></li>
+          <li><a href="#facilities" class="hover:text-green-600 transition">Our Facilities</a></li>
           <li><a href="#doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
-          <li><a href="#about" class="hover:text-green-600 transition">About Us</a></li>
-          <li><a href="#contact" class="hover:text-green-600 transition">Contact</a></li>
+          <li><a href="about-us.html" class="hover:text-green-600 transition">About Us</a></li>
+          <li><a href="#contact" class="hover:text-green-600 transition">Contact Us</a></li>
         </ul>
       </div>
 
@@ -233,8 +237,8 @@
       <div class="max-w-7xl mx-auto px-6 md:px-12 py-4 flex flex-col md:flex-row justify-between items-center text-sm text-gray-500">
         <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
         <div class="space-x-4 mt-2 md:mt-0">
-          <a href="src/pages/privacy-policy.html" class="hover:text-green-600 transition">Privacy Policy</a>
-          <a href="#" class="hover:text-green-600 transition">Terms of Service</a>
+          <a href="" class="hover:text-green-600 transition">Privacy Policy</a>
+          <a href="terms-of-service.html" class="hover:text-green-600 transition">Terms of Service</a>
         </div>
       </div>
     </div>
