--- a/src/pages/terms-of-service.html
+++ b/src/pages/terms-of-service.html
@@ -63,7 +63,7 @@
           <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
           <li><a href="#facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
           <li><a href="#doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
-          <li><a href="#about" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
+          <li><a href="about-us.html" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">About Us</a></li>
           <li>
             <a href="#contact" class="block w-full text-center bg-green-700 text-white rounded-md hover:bg-green-800 px-6 py-3">Contact Us</a>
           </li>
@@ -127,16 +127,16 @@
           </div>
     
           <!-- Quick Links -->
-          <div>
-            <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
-            <ul class="space-y-2 text-gray-600 text-sm">
-                <li><a href="#services" class="hover:text-green-600 transition">Our Services</a></li>
-          <li><a href="#facilities" class="hover:text-green-600 transition">Facilities</a></li>
+      <div>
+        <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
+        <ul class="space-y-2 text-gray-600 text-sm">
+          <li><a href="#services" class="hover:text-green-600 transition">Our Services</a></li>
+          <li><a href="#facilities" class="hover:text-green-600 transition">Our Facilities</a></li>
           <li><a href="#doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
-          <li><a href="#about" class="hover:text-green-600 transition">About Us</a></li>
-          <li><a href="#contact" class="hover:text-green-600 transition">Contact</a></li>
-            </ul>
-          </div>
+          <li><a href="about-us.html" class="hover:text-green-600 transition">About Us</a></li>
+          <li><a href="#contact" class="hover:text-green-600 transition">Contact Us</a></li>
+        </ul>
+      </div>
     
           <!-- Contact Info -->
           <div>
