--- a/src/pages/privacy-policy.html
+++ b/src/pages/privacy-policy.html
@@ -63,7 +63,7 @@
   <nav class="fixed top-0 z-50 w-full bg-white border-b shadow-md sm:px-4 md:px-6 px-10 py-2" aria-label="Main navigation">
     <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
       <!-- Logo -->
-      <a href="../../index.html" class="flex items-center justify-center">
+      <a href="../../" class="flex items-center justify-center">
         <img src="../img/logo/mvh_logo.png" class="h-16 mr-3" alt="MVH Logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap hidden md:inline">
           Metro Vigan Hospital
@@ -211,25 +211,20 @@
         <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
         <div class="flex space-x-4">
           <!-- Facebook -->
-          <a href="#" class="hover:text-green-600 transition" aria-label="Facebook">
+          <a href="https://www.facebook.com/metroviganhospital" target="_blank" class="hover:text-green-600 transition" aria-label="Facebook">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
               <path d="M22.675 0h-21.35C.597 0 0 .597 0 1.333v21.333C0 23.403.597 24 1.325 24h11.495v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.894-4.788 4.66-4.788 1.325 0 2.463.1 2.795.144v3.24h-1.918c-1.505 0-1.796.716-1.796 1.763v2.314h3.587l-.467 3.622h-3.12V24h6.116C23.403 24 24 23.403 24 22.667V1.333C24 .597 23.403 0 22.675 0z"/>
             </svg>
           </a>
-          <!-- Twitter/X -->
-          <a href="#" class="hover:text-green-600 transition" aria-label="Twitter">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
-              <path d="M22.46 6.003c-.793.353-1.644.59-2.538.697a4.48 4.48 0 0 0 1.963-2.47 8.966 8.966 0 0 1-2.84 1.084 4.466 4.466 0 0 0-7.606 4.07A12.675 12.675 0 0 1 3.16 4.852a4.466 4.466 0 0 0 1.382 5.956 4.449 4.449 0 0 1-2.023-.56v.057a4.47 4.47 0 0 0 3.58 4.377 4.482 4.482 0 0 1-2.016.076 4.474 4.474 0 0 0 4.174 3.104A8.963 8.963 0 0 1 2 19.54 12.65 12.65 0 0 0 8.86 21.5c7.547 0 11.675-6.253 11.675-11.675 0-.178-.004-.355-.012-.531a8.354 8.354 0 0 0 2.053-2.126z"/>
-            </svg>
-          </a>
           <!-- Instagram -->
-          <a href="#" class="hover:text-green-600 transition" aria-label="Instagram">
+          <a href="https://www.instagram.com/metroviganhospital/" target="_blank" class="hover:text-green-600 transition" aria-label="Instagram">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="currentColor" viewBox="0 0 24 24">
               <path d="M7.75 2h8.5A5.76 5.76 0 0 1 22 7.75v8.5A5.76 5.76 0 0 1 16.25 22h-8.5A5.76 5.76 0 0 1 2 16.25v-8.5A5.76 5.76 0 0 1 7.75 2zm0 2A3.75 3.75 0 0 0 4 7.75v8.5A3.75 3.75 0 0 0 7.75 20h8.5A3.75 3.75 0 0 0 20 16.25v-8.5A3.75 3.75 0 0 0 16.25 4h-8.5zm4.25 3a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6zm5.5-3a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
             </svg>
           </a>
         </div>
       </div>
+
     </div>
 
     <!-- Bottom Bar -->
