--- a/src/pages/terms-of-service.html
+++ b/src/pages/terms-of-service.html
@@ -138,30 +138,32 @@
         </ul>
       </div>
     
-          <!-- Contact Info -->
-          <div>
-            <h3 class="text-lg font-semibold mb-4">Contact Us</h3>
-            <ul class="space-y-3 text-gray-600 text-sm">
-              <li class="flex items-center space-x-2">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26c.7.47 1.52.47 2.22 0L21 8m-18 8h18" />
-                </svg>
-                <span>info@metroviganhospital.com</span>
-              </li>
-              <li class="flex items-center space-x-2">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5h2l3.6 7.59-1.35 2.44C7.08 16.37 7.5 17 8.2 17h7.6c.7 0 1.12-.63.95-1.26l-1.35-2.44L19 5h2" />
-                </svg>
-                <span>+63 (123) 456-7890</span>
-              </li>
-              <li class="flex items-center space-x-2">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2c4.97 0 9 4.03 9 9 0 7-9 13-9 13S3 18 3 11c0-4.97 4.03-9 9-9z" />
-                </svg>
-                <span>Rizal St., Brgy. IV (Poblacion), Bantay, Philippines</span>
-              </li>
-            </ul>
-          </div>
+         <!-- Contact Info -->
+      <div>
+        <h3 class="text-lg font-semibold mb-4">Contact Us</h3>
+        <ul class="space-y-3 text-gray-600 text-sm">
+          <li class="flex items-center space-x-2">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26c.7.47 1.52.47 2.22 0L21 8m-18 8h18" />
+            </svg>
+            <span><a href="mailto:example@email.com" target="_blank" class="hover:underline hover:underline-offset-2">info@metroviganhospital.com</a></span>
+          </li>
+          <li class="flex items-center space-x-2">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5h2l3.6 7.59-1.35 2.44C7.08 16.37 7.5 17 8.2 17h7.6c.7 0 1.12-.63.95-1.26l-1.35-2.44L19 5h2" />
+            </svg>
+            <span>+63 (123) 456-7890</span>
+          </li>
+          <li class="flex items-center space-x-2">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2c4.97 0 9 4.03 9 9 0 7-9 13-9 13S3 18 3 11c0-4.97 4.03-9 9-9z" />
+            </svg>
+            <span><a href="https://maps.app.goo.gl/acCeWcUGXqfhwvtcA" 
+              target="_blank" class="hover:underline hover:underline-offset-2">Rizal St., Brgy. IV (Poblacion), Bantay, Philippines</a></span>
+          </li>
+
+        </ul>
+      </div>
     
           <!-- Social Media -->
       <div>
