--- a/index.html
+++ b/index.html
@@ -1103,6 +1103,68 @@
     </div>
   </section>
 
+<!--
+<section>
+ Emergency Contact Section 
+<div class="mt-8 text-center">
+  <h3 class="text-2xl font-bold text-red-600 mb-4">🚨 For Emergencies</h3>
+  
+  <div class="flex flex-col sm:flex-row gap-4 justify-center">
+     Call Emergency 
+    <a href="tel:+639275090414" 
+       class="flex items-center justify-center bg-red-600 text-white px-6 py-3 rounded-lg shadow hover:bg-red-700 transition w-full sm:w-auto">
+       Phone Icon 
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h2.28a1 1 0 01.948.684l1.498 4.494a1 1 0 01-.502 1.21l-2.243 1.122a11.042 11.042 0 005.516 5.516l1.122-2.243a1 1 0 011.21-.502l4.494 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+      </svg>
+      Call Emergency
+    </a>
+
+  
+    <a href="sms:+639275090414?body=Emergency%20Assistance%20Needed!" 
+       class="flex items-center justify-center bg-yellow-500 text-white px-6 py-3 rounded-lg shadow hover:bg-yellow-600 transition w-full sm:w-auto">
+
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m5 8H6a2 2 0 01-2-2V6a2 2 0 012-2h12a2 2 0 012 2v8l-4 4z" />
+      </svg>
+      Send Emergency SMS
+    </a>
+  </div>
+</div>
+
+
+<div class="mt-8 flex flex-col lg:flex-row items-center justify-center gap-6 text-center lg:text-left">
+  
+
+  <h3 class="text-2xl font-bold text-green-700">📞 For Inquiries:</h3>
+  
+
+  <div class="flex flex-col sm:flex-row gap-4 mt-4 lg:mt-0">
+
+    <a href="tel:+639275090414" 
+       class="flex items-center justify-center bg-green-600 text-white px-6 py-3 rounded-lg shadow hover:bg-green-700 transition w-full sm:w-auto">
+
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h2.28a1 1 0 01.948.684l1.498 4.494a1 1 0 01-.502 1.21l-2.243 1.122a11.042 11.042 0 005.516 5.516l1.122-2.243a1 1 0 011.21-.502l4.494 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z" />
+      </svg>
+      Call Us
+    </a>
+
+
+    <a href="sms:+639275090414?body=Hello,%20I%20would%20like%20to%20inquire%20about%20your%20services." 
+       class="flex items-center justify-center bg-blue-600 text-white px-6 py-3 rounded-lg shadow hover:bg-blue-700 transition w-full sm:w-auto">
+ 
+      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h4m5 8H6a2 2 0 01-2-2V6a2 2 0 012-2h12a2 2 0 012 2v8l-4 4z" />
+      </svg>
+      Send SMS
+    </a>
+  </div>
+</div>
+
+</section>
+-->
+
   <!-- FOOTER -->
   <footer class="bg-gray-50 text-gray-800">
     <div class="max-w-7xl mx-auto px-6 md:px-12 py-12 grid grid-cols-1 md:grid-cols-4 gap-10">
@@ -1141,7 +1203,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26c.7.47 1.52.47 2.22 0L21 8m-18 8h18" />
             </svg>
-            <span>info@metroviganhospital.com</span>
+            <span><a href="mailto:example@email.com" target="_blank" class="hover:underline hover:underline-offset-2">info@metroviganhospital.com</a></span>
           </li>
           <li class="flex items-center space-x-2">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -1153,8 +1215,10 @@
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2c4.97 0 9 4.03 9 9 0 7-9 13-9 13S3 18 3 11c0-4.97 4.03-9 9-9z" />
             </svg>
-            <span>Rizal St., Brgy. IV (Poblacion), Bantay, Philippines</span>
+            <span><a href="https://maps.app.goo.gl/acCeWcUGXqfhwvtcA" 
+              target="_blank" class="hover:underline hover:underline-offset-2">Rizal St., Brgy. IV (Poblacion), Bantay, Philippines</a></span>
           </li>
+
         </ul>
       </div>
 
@@ -1176,7 +1240,7 @@
           </a>
         </div>
       </div>
-      
+
     </div>
 
     <!-- Bottom Bar -->
