--- a/src/pages/privacy-policy.html
+++ b/src/pages/privacy-policy.html
@@ -189,7 +189,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26c.7.47 1.52.47 2.22 0L21 8m-18 8h18" />
             </svg>
-            <span>info@metroviganhospital.com</span>
+            <span><a href="mailto:example@email.com" target="_blank" class="hover:underline hover:underline-offset-2">info@metroviganhospital.com</a></span>
           </li>
           <li class="flex items-center space-x-2">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -201,8 +201,10 @@
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2c4.97 0 9 4.03 9 9 0 7-9 13-9 13S3 18 3 11c0-4.97 4.03-9 9-9z" />
             </svg>
-            <span>Rizal St., Brgy. IV (Poblacion), Bantay, Philippines</span>
+            <span><a href="https://maps.app.goo.gl/acCeWcUGXqfhwvtcA" 
+              target="_blank" class="hover:underline hover:underline-offset-2">Rizal St., Brgy. IV (Poblacion), Bantay, Philippines</a></span>
           </li>
+
         </ul>
       </div>
 
