update navbar in home and about page

--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -193,7 +193,7 @@
       </h2>
   
       <!-- Chairman (Separate) -->
-      <div class="mb-10" data-aos="fade-up">
+      <div class="p-6 bg-white rounded-lg shadow hover:shadow-md transition mb-10" data-aos="fade-up">
         <h3 class="font-bold text-2xl text-green-700">Dr. Ernesto R. Tagorda, Jr.</h3>
         <p class="text-gray-700 mt-1 text-lg">BOD Chairman</p>
       </div>
@@ -233,7 +233,7 @@
   </h2>
   
   <!-- Medical Director (Separate) -->
-  <div class="mb-10" data-aos="fade-up">
+  <div class="mb-10 p-6 bg-white rounded-lg shadow hover:shadow-md transition mb-10" data-aos="fade-up">
     <h3 class="font-bold text-2xl text-green-700">Digna R. Ragasa, MD, MHA, FPCHA</h3>
     <p class="text-gray-700 mt-1 text-lg">Chief Executive Officer</p>
   </div>
@@ -262,7 +262,7 @@
     </div>
     <div class="p-6 bg-white rounded-lg shadow hover:shadow-md transition">
         <h3 class="font-bold text-lg text-gray-800">Peeble Narita G. Agdamag, MD</h3>
-        <p class="text-gray-600 text-sm">Head - Marketing</p>
+        <p class="text-gray-600 text-sm">Head - Marketing / UHC</p>
     </div>
     <div class="p-6 bg-white rounded-lg shadow hover:shadow-md transition">
       <h3 class="font-bold text-lg text-gray-800">John Leo Ruelos, CPA</h3>
