update mailto: with cc

--- a/index.html
+++ b/index.html
@@ -1203,7 +1203,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26c.7.47 1.52.47 2.22 0L21 8m-18 8h18" />
             </svg>
-            <span><a href="mailto:example@email.com" target="_blank" class="hover:underline hover:underline-offset-2">info@metroviganhospital.com</a></span>
+            <span><a href="mailto:info@metroviganhospital.com?cc=marketing@metroviganhospital.com" target="_blank" class="hover:underline hover:underline-offset-2">info@metroviganhospital.com</a></span>
           </li>
           <li class="flex items-center space-x-2">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
