--- a/src/pages/careers.html
+++ b/src/pages/careers.html
@@ -59,7 +59,7 @@
       <!-- Navbar Menu -->
       <div id="navbar-menu" class="hidden w-full lg:flex lg:w-auto">
         <ul class="font-medium flex flex-col p-4 text-lg lg:flex-row lg:space-x-7">
-          <li><a href="#home" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
+          <li><a href="../../" class="block py-2 font-bold hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Home</a></li>
           <li><a href="#services" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Services</a></li>
           <li><a href="#facilities" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Facilities</a></li>
           <li><a href="#doctors" class="block py-2 hover:underline hover:underline-offset-[0.425rem] hover:decoration-green-700">Doctors</a></li>
@@ -94,7 +94,7 @@
         <p class="mt-4 text-gray-700 text-sm">
           Provide patient-centered care and assist doctors in treatment and procedures.
         </p>
-        <a href="mailto:hr@mvhospital.com"
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresources@metroviganhospital.com"
            class="mt-4 inline-block bg-green-600 text-white px-5 py-2 rounded-md hover:bg-green-700 transition">
           Apply Now
         </a>
@@ -108,7 +108,7 @@
         <p class="mt-4 text-gray-700 text-sm">
           Conduct lab tests accurately and ensure high-quality diagnostic services.
         </p>
-        <a href="mailto:hr@mvhospital.com"
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresources@metroviganhospital.com"
            class="mt-4 inline-block bg-green-600 text-white px-5 py-2 rounded-md hover:bg-green-700 transition">
           Apply Now
         </a>
@@ -122,7 +122,7 @@
         <p class="mt-4 text-gray-700 text-sm">
           Dispense medications, counsel patients, and manage pharmacy operations.
         </p>
-        <a href="mailto:hr@mvhospital.com"
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresources@metroviganhospital.com"
            class="mt-4 inline-block bg-green-600 text-white px-5 py-2 rounded-md hover:bg-green-700 transition">
           Apply Now
         </a>
@@ -136,7 +136,7 @@
       <h2 class="text-2xl font-bold text-gray-800">How to Apply</h2>
       <p class="mt-4 text-gray-600">
         Send your updated resume and cover letter to 
-        <a href="mailto:hr@mvhospital.com" class="text-green-700 font-semibold hover:underline">careers@metroviganhospital.com</a>.
+        <a href="mailto:careers@metroviganhospital.com?cc=humanresources@metroviganhospital.com" class="text-green-700 font-semibold hover:underline">careers@metroviganhospital.com</a>.
       </p>
       <p class="mt-2 text-gray-600">
         For inquiries, contact our HR Department at 
@@ -183,7 +183,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26c.7.47 1.52.47 2.22 0L21 8m-18 8h18" />
             </svg>
-            <span><a href="mailto:example@email.com" target="_blank" class="hover:underline hover:underline-offset-2">info@metroviganhospital.com</a></span>
+            <span><a href="mailto:info@metroviganhospital.com?cc=marketing@metroviganhospital.com" target="_blank" class="hover:underline hover:underline-offset-2">info@metroviganhospital.com</a></span>
           </li>
           <li class="flex items-center space-x-2">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
