--- a/index.html
+++ b/index.html
@@ -1061,13 +1061,14 @@
       <div data-aos="fade-right">
         <h3 class="text-2xl font-semibold text-gray-800 mb-4">Our Location</h3>
         <p class="text-gray-600 mb-4">
-          We are located at <strong>Rizal St., Brgy. IV (Poblacion), Bantay, Philippines</strong>. 
+          We are located at <strong><a href="https://maps.app.goo.gl/acCeWcUGXqfhwvtcA" 
+              target="_blank" class="hover:underline hover:underline-offset-2">Rizal St., Brgy. IV (Poblacion), Bantay, Philippines</a></strong>. 
           Our hospital is easily accessible with convenient parking for patients and visitors.
         </p>
         <div class="rounded-xl overflow-hidden shadow-lg border border-gray-200">
           <iframe 
             src="https://www.google.com/maps?q=Rizal+St.,+Brgy.+IV+(Poblacion),+Bantay,+Philippines&output=embed"
-            width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
+            width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" title="MVH Address">
           </iframe>
         </div>
       </div>
@@ -1191,7 +1192,7 @@
           <li><a href="#facilities" class="hover:text-green-600 transition">Our Facilities</a></li>
           <li><a href="#doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
           <li><a href="src/pages/about-us.html" class="hover:text-green-600 transition">About Us</a></li>
-          <li><a href="#contact" class="hover:text-green-600 transition">Contact Us</a></li>
+          <li><a href="src/pages/careers.html" class="hover:text-green-600 transition">Careers</a></li>
         </ul>
       </div>
 
