--- a/src/pages/careers.html
+++ b/src/pages/careers.html
@@ -170,8 +170,8 @@
           <li><a href="#services" class="hover:text-green-600 transition">Our Services</a></li>
           <li><a href="#facilities" class="hover:text-green-600 transition">Our Facilities</a></li>
           <li><a href="#doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
-          <li><a href="" class="hover:text-green-600 transition">About Us</a></li>
-          <li><a href="#contact" class="hover:text-green-600 transition">Contact Us</a></li>
+          <li><a href="about-us.html" class="hover:text-green-600 transition">About Us</a></li>
+          <li><a href="" class="hover:text-green-600 transition">Careers</a></li>
         </ul>
       </div>
 
