--- a/src/pages/privacy-policy.html
+++ b/src/pages/privacy-policy.html
@@ -177,7 +177,7 @@
           <li><a href="#facilities" class="hover:text-green-600 transition">Our Facilities</a></li>
           <li><a href="#doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
           <li><a href="about-us.html" class="hover:text-green-600 transition">About Us</a></li>
-          <li><a href="#contact" class="hover:text-green-600 transition">Contact Us</a></li>
+          <li><a href="careers.html" class="hover:text-green-600 transition">Careers</a></li>
         </ul>
       </div>
 
