--- a/src/pages/careers.html
+++ b/src/pages/careers.html
@@ -95,7 +95,7 @@
           Provide patient-centered care and assist doctors in treatment and procedures.
         </p>
         <a href="mailto:careers@metroviganhospital.com?cc=humanresources@metroviganhospital.com"
-           class="mt-4 inline-block bg-green-600 text-white px-5 py-2 rounded-md hover:bg-green-700 transition">
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
           Apply Now
         </a>
       </div>
@@ -109,7 +109,7 @@
           Conduct lab tests accurately and ensure high-quality diagnostic services.
         </p>
         <a href="mailto:careers@metroviganhospital.com?cc=humanresources@metroviganhospital.com"
-           class="mt-4 inline-block bg-green-600 text-white px-5 py-2 rounded-md hover:bg-green-700 transition">
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
           Apply Now
         </a>
       </div>
@@ -123,7 +123,7 @@
           Dispense medications, counsel patients, and manage pharmacy operations.
         </p>
         <a href="mailto:careers@metroviganhospital.com?cc=humanresources@metroviganhospital.com"
-           class="mt-4 inline-block bg-green-600 text-white px-5 py-2 rounded-md hover:bg-green-700 transition">
+           class="mt-4 inline-block bg-[#04813b] text-white px-5 py-2 rounded-md hover:bg-[#16a94c] transition">
           Apply Now
         </a>
       </div>
@@ -167,11 +167,11 @@
       <div>
         <h3 class="text-lg font-semibold mb-4">Quick Links</h3>
         <ul class="space-y-2 text-gray-600 text-sm">
-          <li><a href="#services" class="hover:text-green-600 transition">Our Services</a></li>
-          <li><a href="#facilities" class="hover:text-green-600 transition">Our Facilities</a></li>
-          <li><a href="#doctors" class="hover:text-green-600 transition">Our Doctors</a></li>
-          <li><a href="about-us.html" class="hover:text-green-600 transition">About Us</a></li>
-          <li><a href="" class="hover:text-green-600 transition">Careers</a></li>
+          <li><a href="#services" class="hover:text-[#04813b] transition">Our Services</a></li>
+          <li><a href="#facilities" class="hover:text-[#04813b] transition">Our Facilities</a></li>
+          <li><a href="#doctors" class="hover:text-[#04813b] transition">Our Doctors</a></li>
+          <li><a href="about-us.html" class="hover:text-[#04813b] transition">About Us</a></li>
+          <li><a href="" class="hover:text-[#04813b] transition">Careers</a></li>
         </ul>
       </div>
 
@@ -180,7 +180,7 @@
         <h3 class="text-lg font-semibold mb-4">Contact Us</h3>
         <ul class="space-y-3 text-gray-600 text-sm">
           <li class="flex items-center space-x-2">
-  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-[#04813b]" fill="none" viewBox="0 0 24 24" stroke="currentColor">
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26c.7.47 1.62.47 2.32 0L21 8M5 19h14a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2z" />
   </svg>
   <span>
@@ -191,7 +191,7 @@
 </li>
 
           <li class="flex items-center space-x-2">
-  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-[#04813b]" fill="none" viewBox="0 0 24 24" stroke="currentColor">
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.95.68l1.2 3.59a1 1 0 01-.27 1.05l-2.2 2.2a16 16 0 006.59 6.59l2.2-2.2a1 1 0 011.05-.27l3.59 1.2a1 1 0 01.68.95V19a2 2 0 01-2 2h-1C9.72 21 3 14.28 3 6V5z" />
   </svg>
   <span>
@@ -202,7 +202,7 @@
 </li>
 
           <li class="flex items-center space-x-2">
-  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+  <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-[#04813b]" fill="none" viewBox="0 0 24 24" stroke="currentColor">
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 11 7 11s7-5.75 7-11c0-3.87-3.13-7-7-7z" />
     <circle cx="12" cy="9" r="2" stroke-width="2" />
   </svg>
@@ -221,14 +221,14 @@
         <h3 class="text-lg font-semibold mb-4">Follow Us</h3>
         <div class="flex space-x-4">
           <!-- Facebook -->
-          <a href="https://www.facebook.com/metroviganhospital" target="_blank" class="hover:text-green-600 transition" aria-label="Facebook">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-green-600 transition" viewBox="0 0 24 24" fill="currentColor">
+          <a href="https://www.facebook.com/metroviganhospital" target="_blank" class="hover:text-[#04813b] transition" aria-label="Facebook">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-[#04813b] transition" viewBox="0 0 24 24" fill="currentColor">
     <path d="M22 12c0-5.522-4.478-10-10-10S2 6.478 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54v-2.891h2.54V9.845c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.462h-1.26c-1.243 0-1.63.772-1.63 1.562v1.875h2.773l-.443 2.891h-2.33v6.987C18.343 21.128 22 16.991 22 12z"/>
   </svg>
           </a>
           <!-- Instagram -->
-          <a href="https://www.instagram.com/metroviganhospital/" target="_blank" class="hover:text-green-600 transition" aria-label="Instagram">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-green-600 transition" viewBox="0 0 24 24" fill="currentColor">
+          <a href="https://www.instagram.com/metroviganhospital/" target="_blank" class="hover:text-[#04813b] transition" aria-label="Instagram">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7 text-gray-600 hover:text-[#04813b] transition" viewBox="0 0 24 24" fill="currentColor">
     <path d="M7.75 2h8.5A5.75 5.75 0 0 1 22 7.75v8.5A5.75 5.75 0 0 1 16.25 22h-8.5A5.75 5.75 0 0 1 2 16.25v-8.5A5.75 5.75 0 0 1 7.75 2zm0 1.5A4.25 4.25 0 0 0 3.5 7.75v8.5A4.25 4.25 0 0 0 7.75 20.5h8.5a4.25 4.25 0 0 0 4.25-4.25v-8.5A4.25 4.25 0 0 0 16.25 3.5h-8.5zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 1.5a3.5 3.5 0 1 0 0 7 3.5 3.5 0 0 0 0-7zm5.75-.88a1.13 1.13 0 1 1-2.25 0 1.13 1.13 0 0 1 2.25 0z"/>
   </svg>
           </a>
@@ -242,8 +242,8 @@
       <div class="max-w-7xl mx-auto px-6 md:px-12 py-4 flex flex-col md:flex-row justify-between items-center text-sm text-gray-500">
         <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
         <div class="space-x-4 mt-2 md:mt-0">
-          <a href="privacy-policy.html" class="hover:text-green-600 transition">Privacy Policy</a>
-          <a href="terms-of-service.html" class="hover:text-green-600 transition">Terms of Service</a>
+          <a href="privacy-policy.html" class="hover:text-[#04813b] transition">Privacy Policy</a>
+          <a href="terms-of-service.html" class="hover:text-[#04813b] transition">Terms of Service</a>
         </div>
       </div>
     </div>
