--- a/src/pages/careers.html
+++ b/src/pages/careers.html
@@ -45,7 +45,8 @@
       <!-- Logo -->
       <a href="../../" class="flex items-center justify-center">
         <img src="../img/logo/mvh_logo.png" class="h-16 mr-3" alt="MVH Logo" />
-        <span class="self-center text-2xl font-semibold whitespace-nowrap hidden md:inline">Metro Vigan Hospital</span>
+        <span class="self-center text-2xl font-semibold whitespace-nowrap hidden xl:inline">Metro Vigan Hospital</span>
+        <span class="self-center text-2xl font-semibold whitespace-nowrap inline xl:hidden">MVH</span>
       </a>
   
       <!-- Toggle Button (Visible on small & medium screens) -->
