--- a/src/pages/about-us.html
+++ b/src/pages/about-us.html
@@ -294,7 +294,7 @@
 <div class="max-w-3xl mx-auto my-12 bg-white shadow-lg rounded-lg overflow-hidden" data-aos="fade-up" data-aos-delay="200">
     
     <!-- Header -->
-<header class="relative bg-green-700 text-white curve-header">
+<div class="relative bg-green-700 text-white curve-header">
     <div class="flex flex-col items-center py-6 text-center">
       <h1 class="text-2xl font-bold uppercase tracking-wide">METRO VIGAN HOSPITAL</h1>
       <p class="text-sm mt-1 leading-5">
@@ -306,10 +306,10 @@
       </div>
       <!-- Yellow Accent -->
     <div class="absolute bottom-0 left-0 w-full h-3 bg-yellow-400"></div>
-  </header>
+</div>
 
     <!-- Main Content -->
-    <main class="px-8 py-10 text-gray-800">
+    <div class="px-8 py-10 text-gray-800">
       <!-- Vision -->
       <section class="text-center mb-8">
         <h2 class="text-green-700 text-xl font-bold uppercase">Vision</h2>
@@ -349,12 +349,12 @@
         <p class="text-lg font-bold uppercase tracking-wide">ISO 9001:2015 CERTIFIED</p>
       </section>
   
-    </main>
+    </div>
 
-    <!-- Footer (Green with Curve) -->
-    <footer class="relative bg-green-700 text-white curve-footer py-3 text-center">
+    <!-- (Green with Curve) -->
+    <div class="relative bg-green-700 text-white curve-footer py-3 text-center">
       <p class="italic text-xs">Entrust your health to us. We care, we cure, we can!</p>
-    </footer>
+    </div>
   </div>
 
 
@@ -453,6 +453,7 @@
     <!-- Bottom Bar -->
     <div class="border-t border-gray-200 mt-8">
       <div class="max-w-7xl mx-auto px-6 md:px-12 py-4 flex flex-col md:flex-row justify-between items-center text-sm text-gray-500">
+        <span class="p-2 text-[0.5rem] opacity-80">website created and maintained by <a href="https://www.instagram.com/_xtianbar/" target="_blank" class="text-[0.6rem] opacity-80 font-bold hover:underline hover:underline-offset-[0.3rem] text-[#04831b] hover:text-gray-800 decoration-[#04813b] underline underline-offset-[0.3rem]">@_xtianbar</a></span>
         <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
         <div class="space-x-4 mt-2 md:mt-0">
           <a href="privacy-policy.html" class="hover:text-green-600 transition">Privacy Policy</a>
