--- a/src/pages/privacy-policy.html
+++ b/src/pages/privacy-policy.html
@@ -245,6 +245,7 @@
     <!-- Bottom Bar -->
     <div class="border-t border-gray-200 mt-8">
       <div class="max-w-7xl mx-auto px-6 md:px-12 py-4 flex flex-col md:flex-row justify-between items-center text-sm text-gray-500">
+        <span class="p-2 text-[0.5rem] opacity-80">website created and maintained by <a href="https://www.instagram.com/_xtianbar/" target="_blank" class="text-[0.6rem] opacity-80 font-bold hover:underline hover:underline-offset-[0.3rem] text-[#04831b] hover:text-gray-800 decoration-[#04813b] underline underline-offset-[0.3rem]">@_xtianbar</a></span>
         <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
         <div class="space-x-4 mt-2 md:mt-0">
           <a href="" class="hover:text-green-600 transition">Privacy Policy</a>
