--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
 
   <!-- Title & Description -->
   <title>Metro Vigan Hospital</title>
-  <meta name="description" content="Read the Privacy Notice of Metro Vigan Hospital. We are committed to protecting your personal and health information, following the Data Privacy Act.">
-  
-  <!-- Keywords -->
-  <meta name="keywords" content="Metro Vigan Hospital, MVH, Private Hospital, Level 2 Private Hospital, Bantay, Ilocos Sur, Ilocos Sur Healthcare">
-  
+
   <!-- Author -->
   <meta name="author" content="Metro Vigan Hospital">
   
   <!-- Robots (SEO Indexing) -->
   <meta name="robots" content="index, follow">
   
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Privacy Notice - Metro Vigan Hospital">
-  <meta property="og:description" content="We are committed to safeguarding your health data and privacy. Read our full Privacy Notice here.">
-  <meta property="og:image" content="https://metroviganhospital.vercel.app/mvh_logo.png">
-  <meta property="og:url" content="https://metroviganhospital.vercel.app/privacy-policy">
+  <!-- Meta Description -->
+  <meta name="description" content="Metro Vigan Hospital is a PhilHealth-accredited Level 2 hospital in Bantay, Ilocos Sur, providing quality healthcare services with expert doctors and modern facilities." />
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="Metro Vigan Hospital, MVH, hospital in Ilocos Sur, Bantay hospital, healthcare services, PhilHealth accredited, Ilocos Sur doctors, modern hospital facilities" />
+
+  <!-- Open Graph (Facebook & Instagram) -->
+  <meta property="og:title" content="Metro Vigan Hospital - Quality Healthcare in Ilocos Sur" />
+  <meta property="og:description" content="Providing compassionate and expert medical care. Metro Vigan Hospital is a PhilHealth-accredited Level 2 hospital with modern facilities and highly skilled doctors." />
+  <meta property="og:image" content="https://www.metroviganhospital.com/src/img/logo/mvh_logo.png" />
+  <meta property="og:url" content="https://www.metroviganhospital.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Metro Vigan Hospital" />
 
   <!-- icons & stylesheet -->
   <link rel="stylesheet" href="src/css/style.css">
@@ -33,6 +36,95 @@
   <!-- Google Font: Roboto -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
+  <!-- For SEO Ranking -->
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "Organization",
+      "name": "Metro Vigan Hospital",
+      "url": "https://www.metroviganhospital.com",
+      "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.png",
+      "sameAs": [
+        "https://www.facebook.com/MetroViganHospital",
+        "https://www.instagram.com/MetroViganHospital"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+63-927-509-0414",
+        "contactType": "Customer Service",
+        "areaServed": "PH",
+        "availableLanguage": "English"
+      },
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Rizal St., Brgy. IV (Poblacion)",
+        "addressLocality": "Bantay",
+        "addressRegion": "Ilocos Sur",
+        "postalCode": "2727",
+        "addressCountry": "PH"
+      }
+    },
+    {
+      "@type": "WebSite",
+      "url": "https://www.metroviganhospital.com",
+      "name": "Metro Vigan Hospital",
+      "description": "Metro Vigan Hospital provides world-class healthcare services in Ilocos Sur, with expert doctors, modern facilities, and patient-centered care.",
+      "publisher": {
+        "@type": "Organization",
+        "name": "Metro Vigan Hospital",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.png"
+        }
+      }
+    },
+    {
+      "@type": "AboutPage",
+      "url": "https://www.metroviganhospital.com/about",
+      "name": "About Us - Metro Vigan Hospital",
+      "description": "Learn about Metro Vigan Hospital, its history, vision, mission, and dedication to delivering quality healthcare services in Ilocos Sur."
+    },
+    {
+      "@type": "JobPosting",
+      "title": "Careers at Metro Vigan Hospital",
+      "description": "Explore job opportunities for doctors, nurses, allied health professionals, and administrative staff at Metro Vigan Hospital.",
+      "hiringOrganization": {
+        "@type": "Organization",
+        "name": "Metro Vigan Hospital",
+        "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.png",
+        "sameAs": "https://www.metroviganhospital.com"
+      },
+      "employmentType": "FULL_TIME",
+      "jobLocation": {
+        "@type": "Place",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Rizal St., Brgy. IV (Poblacion)",
+          "addressLocality": "Bantay",
+          "addressRegion": "Ilocos Sur",
+          "postalCode": "2727",
+          "addressCountry": "PH"
+        }
+      }
+    },
+    {
+      "@type": "WebPage",
+      "url": "https://www.metroviganhospital.com/privacy-policy",
+      "name": "Privacy Policy - Metro Vigan Hospital",
+      "description": "Read Metro Vigan Hospital's Privacy Policy on how we collect, use, and protect patient data under the Data Privacy Act."
+    },
+    {
+      "@type": "WebPage",
+      "url": "https://www.metroviganhospital.com/terms-of-service",
+      "name": "Terms of Service - Metro Vigan Hospital",
+      "description": "Review the Terms of Service for using Metro Vigan Hospital’s website and medical services."
+    }
+  ]
+}
+  </script>
 
 </head>
 <body class="bg-white text-gray-800 overflow-x-hidden">
@@ -1282,7 +1374,7 @@
     <!-- Bottom Bar -->
     <div class="border-t border-gray-200 mt-8">
       <div class="max-w-7xl mx-auto px-6 md:px-12 py-4 flex flex-col md:flex-row justify-between items-center text-sm text-gray-500">
-        <span class="p-2 text-[0.5rem] opacity-80">website created and maintained by <a href="https://www.instagram.com/_xtianbar/" target="_blank" class="text-[0.6rem] opacity-80 font-bold hover:underline hover:underline-offset-[0.3rem] text-[#04831b] hover:text-gray-800 decoration-[#04813b] underline underline-offset-[0.3rem]">@_xtianbar</a></span>
+<span class="p-2 text-[0.5rem] opacity-80 flex flex-wrap items-center gap-1 justify-center">website created and maintained by <a href="https://xtianbar.vercel.app/" target="_blank"><img src="src/img/logo/xtianbar-logo.png" alt="Metro Vigan Hospital Logo" class="h-2 w-auto"></a></span>
         <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
         <div class="space-x-4 mt-2 md:mt-0">
           <a href="src/pages/privacy-policy.html" class="hover:text-[#04813b] transition">Privacy Policy</a>
