--- a/src/pages/privacy-policy.html
+++ b/src/pages/privacy-policy.html
@@ -6,26 +6,26 @@
 
   <!-- Title & Description -->
   <title>Privacy Policy - Metro Vigan Hospital</title>
-  <meta name="description" content="Read the Privacy Notice of Metro Vigan Hospital. We are committed to protecting your personal and health information, following the Data Privacy Act.">
-
-  <!-- Keywords -->
-  <meta name="keywords" content="Metro Vigan Hospital, MVH, Private Hospital, Level 2 Private Hospital, Bantay, Ilocos Sur, Ilocos Sur Healthcare, MVH Privacy Policy, Data Privacy Act, Health Information Privacy">
 
   <!-- Author -->
   <meta name="author" content="Metro Vigan Hospital">
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Privacy Notice - Metro Vigan Hospital">
-  <meta property="og:description" content="We are committed to safeguarding your health data and privacy. Read our full Privacy Notice here.">
-  <meta property="og:image" content="https://metroviganhospital.vercel.app/mvh_logo.png">
-  <meta property="og:url" content="https://metroviganhospital.vercel.app/privacy-policy">
+  <!-- Meta Description -->
+  <meta name="description" content="Read the Privacy Policy of Metro Vigan Hospital. Learn how we protect your personal data and your rights under the Data Privacy Act." />
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="Metro Vigan Hospital Privacy Policy, MVH data privacy, patient confidentiality, hospital privacy policy, data protection, medical privacy" />
+
+  <!-- Open Graph (Facebook & Instagram) -->
+  <meta property="og:title" content="Privacy Policy - Metro Vigan Hospital" />
+  <meta property="og:description" content="Understand how Metro Vigan Hospital safeguards your personal data, complies with the Data Privacy Act, and upholds patient confidentiality." />
+  <meta property="og:image" content="https://www.metroviganhospital.com/src/img/logo/mvh_logo.png" />
+  <meta property="og:url" content="https://www.metroviganhospital.com/privacy-policy" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Metro Vigan Hospital" />
 
   <!-- icons -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/fontawesome.min.css" integrity="sha512-SgaqKKxJDQ/tAUAAXzvxZz33rmn7leYDYfBP+YoMRSENhf3zJyx3SBASt/OfeQwBHA1nxMis7mM3EV/oYT6Fdw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="../css/style.css">
 
   <link rel="icon" href="../img/logo/favicon.ico" type="image/x-icon">
 
@@ -33,28 +33,149 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 
-  <style>
-    body { font-family: 'Roboto', sans-serif; }
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "Organization",
+        "name": "Metro Vigan Hospital",
+        "url": "https://www.metroviganhospital.com",
+        "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.png",
+        "sameAs": [
+          "https://www.facebook.com/MetroViganHospital",
+          "https://www.instagram.com/MetroViganHospital"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+63-927-509-0414",
+          "contactType": "Customer Service",
+          "areaServed": "PH",
+          "availableLanguage": "English"
+        },
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Rizal St., Brgy. IV (Poblacion)",
+          "addressLocality": "Bantay",
+          "addressRegion": "Ilocos Sur",
+          "postalCode": "2727",
+          "addressCountry": "PH"
+        }
+      },
+      {
+        "@type": "WebSite",
+        "url": "https://www.metroviganhospital.com",
+        "name": "Metro Vigan Hospital",
+        "description": "Metro Vigan Hospital provides world-class healthcare services in Ilocos Sur, with expert doctors, modern facilities, and patient-centered care.",
+        "publisher": {
+          "@type": "Organization",
+          "name": "Metro Vigan Hospital",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.png"
+          }
+        }
+      },
+      {
+        "@type": "AboutPage",
+        "url": "https://www.metroviganhospital.com/about",
+        "name": "About Us - Metro Vigan Hospital",
+        "description": "Learn about Metro Vigan Hospital, its history, vision, mission, and dedication to delivering quality healthcare services in Ilocos Sur."
+      },
+      {
+        "@type": "JobPosting",
+        "title": "Careers at Metro Vigan Hospital",
+        "description": "Explore job opportunities for doctors, nurses, allied health professionals, and administrative staff at Metro Vigan Hospital.",
+        "hiringOrganization": {
+          "@type": "Organization",
+          "name": "Metro Vigan Hospital",
+          "logo": "https://www.metroviganhospital.com/src/img/logo/mvh_logo.png",
+          "sameAs": "https://www.metroviganhospital.com"
+        },
+        "employmentType": "FULL_TIME",
+        "jobLocation": {
+          "@type": "Place",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "Rizal St., Brgy. IV (Poblacion)",
+            "addressLocality": "Bantay",
+            "addressRegion": "Ilocos Sur",
+            "postalCode": "2727",
+            "addressCountry": "PH"
+          }
+        }
+      },
+      {
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "How do I apply for a job at Metro Vigan Hospital?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "You can apply by visiting our Careers page and submitting your application through the online form or emailing HR at hr@metroviganhospital.com."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "What positions are currently open?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "We regularly post openings for doctors, nurses, allied health professionals, and administrative staff on our Careers page."
+            }
+          }
+        ]
+      },
+      {
+        "@type": "WebPage",
+        "url": "https://www.metroviganhospital.com/privacy-policy",
+        "name": "Privacy Policy - Metro Vigan Hospital",
+        "description": "Read Metro Vigan Hospital's Privacy Policy on how we collect, use, and protect patient data under the Data Privacy Act."
+      },
+      {
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "How does Metro Vigan Hospital protect my data?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "We comply with the Data Privacy Act and follow strict protocols to safeguard patient information."
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "Who is your Data Protection Officer (DPO)?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "Our DPO is Orlino V. Abalos. You can contact him at bounce_capt@yahoo.com."
+            }
+          }
+        ]
+      },
+      {
+        "@type": "WebPage",
+        "url": "https://www.metroviganhospital.com/terms-of-service",
+        "name": "Terms of Service - Metro Vigan Hospital",
+        "description": "Review the Terms of Service for using Metro Vigan Hospital’s website and medical services."
+      },
+      {
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "What are the terms for using the Metro Vigan Hospital website?",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "By using our website, you agree to our Terms of Service which outline acceptable use, privacy, and legal limitations."
+            }
+          }
+        ]
+      }
+    ]
+  }
+  </script>
 
-    /* Watermark Styling */
-    #pdf-content::before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: url('../img/logo/mvh_logo.png') no-repeat center;
-      background-size: 300px;
-      opacity: 0.05;
-      width: 100%;
-      height: 100%;
-      z-index: 0;
-    }
-    #pdf-content > * {
-      position: relative;
-      z-index: 10;
-    }
-  </style>
 </head>
 
 <body class="bg-gray-100 font-roboto">
@@ -245,7 +366,7 @@
     <!-- Bottom Bar -->
     <div class="border-t border-gray-200 mt-8">
       <div class="max-w-7xl mx-auto px-6 md:px-12 py-4 flex flex-col md:flex-row justify-between items-center text-sm text-gray-500">
-        <span class="p-2 text-[0.5rem] opacity-80">website created and maintained by <a href="https://www.instagram.com/_xtianbar/" target="_blank" class="text-[0.6rem] opacity-80 font-bold hover:underline hover:underline-offset-[0.3rem] text-[#04831b] hover:text-gray-800 decoration-[#04813b] underline underline-offset-[0.3rem]">@_xtianbar</a></span>
+        <span class="p-2 text-[0.5rem] opacity-80 flex flex-wrap items-center gap-1 justify-center">website created and maintained by <a href="https://xtianbar.vercel.app/" target="_blank"><img src="../img/logo/xtianbar-logo.png" alt="Metro Vigan Hospital Logo" class="h-2 w-auto"></a></span>
         <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
         <div class="space-x-4 mt-2 md:mt-0">
           <a href="" class="hover:text-green-600 transition">Privacy Policy</a>
