--- a/src/pages/terms-of-service.html
+++ b/src/pages/terms-of-service.html
@@ -5,35 +5,57 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Title & Description -->
+  <!-- Title -->
   <title>Terms of Service | Metro Vigan Hospital</title>
-  <meta name="description" content="Read the Privacy Notice of Metro Vigan Hospital. We are committed to protecting your personal and health information, following the Data Privacy Act.">
-  
-  <!-- Keywords -->
-  <meta name="keywords" content="Metro Vigan Hospital, MVH, Private Hospital, Level 2 Private Hospital, Bantay, Ilocos Sur, Ilocos Sur Healthcare">
-  
+
   <!-- Author -->
   <meta name="author" content="Metro Vigan Hospital">
   
   <!-- Robots (SEO Indexing) -->
   <meta name="robots" content="index, follow">
   
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Privacy Notice - Metro Vigan Hospital">
-  <meta property="og:description" content="We are committed to safeguarding your health data and privacy. Read our full Privacy Notice here.">
-  <meta property="og:image" content="https://metroviganhospital.vercel.app/mvh_logo.png">
-  <meta property="og:url" content="https://metroviganhospital.vercel.app/privacy-policy">
+  <!-- Meta Description -->
+  <meta name="description" content="Read the Terms of Service for Metro Vigan Hospital. Understand your rights, responsibilities, and our policies when using our healthcare services." />
+
+  <!-- Meta Keywords -->
+  <meta name="keywords" content="Metro Vigan Hospital Terms of Service, MVH policies, hospital terms, healthcare service terms, patient policies, medical service terms" />
+
+  <!-- Open Graph (Facebook & Instagram) -->
+  <meta property="og:title" content="Terms of Service - Metro Vigan Hospital" />
+  <meta property="og:description" content="Review the Terms of Service for Metro Vigan Hospital to understand your rights and our commitment to safe, ethical healthcare practices." />
+  <meta property="og:image" content="https://www.metroviganhospital.com/src/img/logo/mvh_logo.png" />
+  <meta property="og:url" content="https://www.metroviganhospital.com/terms-of-service" />
+  <meta property="og:type" content="website" />
+  <meta property="og:site_name" content="Metro Vigan Hospital" />
 
   <!-- icons & stylesheet -->
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/fontawesome.min.css" integrity="sha512-SgaqKKxJDQ/tAUAAXzvxZz33rmn7leYDYfBP+YoMRSENhf3zJyx3SBASt/OfeQwBHA1nxMis7mM3EV/oYT6Fdw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="icon" href="../img/logo/favicon.ico" type="image/x-icon">
 
   <!-- Google Font: Roboto -->
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Privacy Policy - Metro Vigan Hospital",
+  "url": "https://www.metroviganhospital.com/privacy-policy",
+  "description": "Read Metro Vigan Hospital's Privacy Policy outlining how we collect, use, and protect patient data in compliance with the Data Privacy Act."
+}
+</script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Terms of Service - Metro Vigan Hospital",
+  "url": "https://www.metroviganhospital.com/terms-of-service",
+  "description": "Review Metro Vigan Hospital's Terms of Service regarding the use of our website and medical services."
+}
+</script>
 
 </head>
 <body class="bg-white text-gray-800">
@@ -205,7 +227,7 @@
     <!-- Bottom Bar -->
     <div class="border-t border-gray-200 mt-8">
       <div class="max-w-7xl mx-auto px-6 md:px-12 py-4 flex flex-col md:flex-row justify-between items-center text-sm text-gray-500">
-        <span class="p-2 text-[0.5rem] opacity-80">website created and maintained by <a href="https://www.instagram.com/_xtianbar/" target="_blank" class="text-[0.6rem] opacity-80 font-bold hover:underline hover:underline-offset-[0.3rem] text-[#04831b] hover:text-gray-800 decoration-[#04813b] underline underline-offset-[0.3rem]">@_xtianbar</a></span>
+<span class="p-2 text-[0.5rem] opacity-80 flex flex-wrap items-center gap-1 justify-center">website created and maintained by <a href="https://xtianbar.vercel.app/" target="_blank"><img src="../img/logo/xtianbar-logo.png" alt="Metro Vigan Hospital Logo" class="h-2 w-auto"></a></span>
         <p>&copy; 2025 Metro Vigan Hospital. All rights reserved.</p>
         <div class="space-x-4 mt-2 md:mt-0">
           <a href="privacy-policy.html" class="hover:text-green-600 transition">Privacy Policy</a>
